完成了隧道的动画，未完成Tunnel类和SceneAnimation1的state共享

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div id="root">
-        <div class="webgl-wrapper">
+        <aside class="webgl-wrapper">
             <canvas class="webgl"></canvas>
-        </div>
+        </aside>
     </div>
     <!--    <div style="position: fixed; top: 10px; left: 10px; z-index: 100">-->
     <!--      <button class="btn1">切换fox</button>-->
